--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -1,1 +1,176 @@
-/* TODO: Add sitewide styles */
+:root {
+  --white: #FFFFFF;
+  --black: #000000;
+  --purple: rgb(173, 173, 218);
+  --gray: #808080;
+  --dark-gray: #999999;
+  --light-gray: #CCCCCC;
+  --red: #FF5A5F;
+  --green: rgb(93, 203, 93);
+  --pink: pink;
+  --wheat: wheat;
+  --light-yellow: rgb(245, 249, 3);
+  --navbar-background: #0F1111;
+  --search-icon-background: rgb(241, 168, 33);
+  --search-icon-hover-background: rgb(221, 147, 11);
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  font-size: 12pt;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: var(--white);
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  background-color: var(--white);
+}
+
+p {
+  text-shadow: none;
+  font-style: italic;
+  letter-spacing: 0.6px;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+}
+
+h1 {
+  text-align: center;
+  margin: 40px;
+}
+
+.btn-submit {
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--submit-button-background);
+  box-shadow: -2px -2px 1px var(--gray);
+  color: var(--white);
+  margin-top: 20px;
+}
+
+.heading {
+  font-size: 25pt;
+  font-weight: bold;
+  word-break: break-word;
+}
+
+.subheading {
+  font-size: 17pt;
+  font-weight: bold;
+  word-break: break-word;
+}
+
+.alert-success {
+  color: rgb(93, 203, 93);
+}
+
+input[disabled]:hover {
+  cursor: not-allowed;
+}
+
+select {
+  background-color: var(--other-message-background);
+}
+
+.disabled:hover,
+select[disabled]:hover {
+  cursor: not-allowed;
+}
+
+button.disabled:hover {
+  opacity: .5;
+  cursor: not-allowed;
+}
+
+a,
+button:hover {
+  cursor: pointer;
+}
+
+ul {
+  list-style: none;
+}
+
+.hidden {
+  display: none;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 100%;
+}
+
+form h2 {
+  cursor: pointer;
+}
+
+form input {
+  padding: 10px;
+  background-color: var(--gray);
+  color: var(--white);
+  border-radius: 5px;
+  border: none;
+}
+
+form input:focus {
+  background-color: var(--gray);
+  color: var(--white);
+}
+
+form input[type="file"] {
+  padding: 10px;
+  margin: 0;
+  text-align: center;
+}
+
+form input[type="file"]::file-selector-button {
+  color: var(--white);
+  font-style: italic;
+  font-size: 11px;
+  background-color: var(--modal-content-background);
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-shadow: var(--text-shadow);
+}
+
+form select {
+  padding: 10px;
+}
+
+form textarea {
+  padding: 10px;
+}
+
+form .btn-primary {
+  border: none;
+  margin-top: 20px;
+}
+
+form .btn-primary.enabled:hover {
+  background-color: transparent;
+  color: var(--red);
+  border: 1px solid var(--red);
+}
+
+form input::placeholder {
+  color: var(--white);
+  font-style: italic;
+  font-size: 10pt;
+}
+
+.modal-errors {
+  color: var(--red);
+}
