--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -9,6 +9,7 @@
   --green: rgb(93, 203, 93);
   --pink: pink;
   --wheat: wheat;
+  --orange: orange;
   --light-yellow: rgb(245, 249, 3);
   --navbar-background: #0F1111;
   --search-icon-background: rgb(241, 168, 33);
