--- a/react-vite/src/components/NavBar/NavBar.css
+++ b/react-vite/src/components/NavBar/NavBar.css
@@ -12,7 +12,7 @@
 
 #navbar #logo {
   height: 40px;
-  margin-left: 10px;
+  margin-left: 20px;
 }
 
 #navbar .searchbox {
@@ -115,7 +115,7 @@
 
 #navbar #profile-btns {
   width: 75px;
-  margin-right: 10px;
+  margin-right: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -140,7 +140,12 @@
   display: flex;
   flex-direction: column;
   top: 60px;
-  background-color: #2A2F3E;
+  background-color: var(--gray);
   border-radius: 5px;
   padding: 5px;
+}
+
+#navbar #user-greetings {
+  display: flex;
+  flex-direction: column;
 }
