--- a/react-vite/src/components/NavBar/NavBar.css
+++ b/react-vite/src/components/NavBar/NavBar.css
@@ -64,11 +64,16 @@
 
 #navbar #categories select:focus {
   outline: none;
+  background-color: var(--navbar-background);
 }
 
 #navbar #categories option {
-  color: var(--black);
-  /* background-color: #2A2F3E; */
+  background-color: #2A2F3E;
+  color: white;
+}
+
+#categories option.category s:hover {
+  background-color: #2A2F3E;
 }
 
 #navbar #search-icon {
@@ -122,7 +127,6 @@
   background-color: var(--search-icon-background);
   border-radius: 5px;
   height: 25px;
-  /* background-color: #2A2F3E; */
 }
 
 #navbar #profile-btns:hover {
@@ -135,14 +139,8 @@
   border: none;
 }
 
-#navbar #profile-btns .profile-dropdown {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  top: 60px;
-  background-color: var(--gray);
-  border-radius: 5px;
-  padding: 5px;
+#navbar .margin-right {
+  margin-right: 15px;
 }
 
 #navbar #user-greetings {
