--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -153,7 +153,7 @@ form input[type="file"]::file-selector-button {
   color: var(--white);
   font-style: italic;
   font-size: 11px;
-  background-color: var(--navbar-background);
+  background-color: var(--option-background);
   border: none;
   padding: 5px 10px;
   border-radius: 5px;
@@ -200,4 +200,12 @@ form label {
 
 .box-shadow-green {
   box-shadow: -1px -1px 8px var(--green);
+}
+
+#preview-image {
+  position: absolute;
+  width: 35px;
+  height: 35px;
+  bottom: 83px;
+  left: 400px;
 }
