--- a/react-vite/src/components/UserProfile/UserProfile.css
+++ b/react-vite/src/components/UserProfile/UserProfile.css
@@ -41,7 +41,7 @@
 }
 
 #user-profile-container .profile-details div {
-  min-width: 150px;
+  min-width: 200px;
 }
 
 #user-profile-container .user-profile-avatar {
@@ -55,7 +55,7 @@
 }
 
 #user-profile-container .profile-btns button {
-  background-color: var(--main-content-background);
+  background-color: var(--option-background);
   border: none;
   border-radius: 10px;
   padding: 10px 40px;
