--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -10,6 +10,7 @@
   --pink: pink;
   --wheat: wheat;
   --orange: orange;
+  --light-orange: rgb(221, 147, 11);
   --light-yellow: rgb(245, 249, 3);
   --success-color: rgb(10, 133, 10);
   --text-shadow: rgb(198, 198, 153) 1px 0 10px;
