--- a/react-vite/src/components/Cart/Cart.css
+++ b/react-vite/src/components/Cart/Cart.css
@@ -1,10 +1,18 @@
 #cart-orders {
-  background-color: rgb(220, 218, 218);
+  background-color: var(--cart-background);
   position: fixed;
   right: 0;
   top: 70px;
-  width: 375px;
+  width: 350px;
   height: 100vh;
   border-bottom-left-radius: 5px;
-  padding: 10px;
+  padding: 20px;
+  box-shadow: 1px 1px, -0.3em 0 .4em var(--option-background);
+}
+
+#cart-orders .cart-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 40px;
 }
