--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -23,6 +23,9 @@
   --search-icon-hover-background: rgb(221, 147, 11);
   --product-background: rgb(218, 218, 227);
   --cart-background: rgb(225, 224, 224);
+  --cart-product-background: rgb(205, 197, 197);
+  --cart-scroll-color: rgb(172, 166, 166);
+  --html-scroll-color: rgb(156, 144, 144);
 }
 
 option:hover {
@@ -35,9 +38,13 @@ option:hover {
   font-size: 12pt;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: var(--white);
+  box-shadow: -1px -1px 0.;
 }
 
 html {
+  scrollbar-color: var(--html-scroll-color) var(--navbar-background);
+  overflow-x: hidden;
+  overflow-y: scroll;
   scroll-behavior: smooth;
 }
 
