--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -25,6 +25,7 @@
   --cart-background: rgb(225, 224, 224);
   --cart-product-background: rgb(205, 197, 197);
   --cart-scroll-color: rgb(172, 166, 166);
+  --cart-delete-btn: rgb(135, 93, 93);
   --html-scroll-color: rgb(156, 144, 144);
 }
 
