--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -26,6 +26,7 @@
   --cart-product-background: rgb(205, 197, 197);
   --cart-scroll-color: rgb(172, 166, 166);
   --cart-delete-btn: rgb(135, 93, 93);
+  --cart-subtotal-btn: rgb(186, 167, 167);
   --html-scroll-color: rgb(156, 144, 144);
 }
 
