--- a/react-vite/src/components/CartProducts/CartProducts.css
+++ b/react-vite/src/components/CartProducts/CartProducts.css
@@ -39,14 +39,18 @@
   color: var(--black);
 }
 
+#cart-products .checkout p:hover {
+  text-decoration: underline;
+}
+
 #cart-products .subtotal {
-  background-color: var(--purple);
+  background-color: var(--cart-subtotal-btn);
   width: 120px;
   padding: 10px 20px;
   border-radius: 5px;
   display: flex;
   justify-content: center;
-  cursor: pointer;
+  cursor: normal;
 }
 
 #cart-products .subtotal .text {
