--- a/react-vite/src/components/Cart/Cart.css
+++ b/react-vite/src/components/Cart/Cart.css
@@ -16,3 +16,16 @@
   justify-content: center;
   gap: 40px;
 }
+
+#cart-orders .close-cart-btn i {
+  color: var(--red);
+  font-size: xx-large;
+  position: absolute;
+  top: 18px;
+  left: 5px;
+  cursor: pointer;
+}
+
+#cart-orders .close-cart-btn i:hover {
+  opacity: 0.7;
+}
