hide add to cart button for items that are already in cart

--- a/react-vite/src/components/CartProduct/CartProduct.css
+++ b/react-vite/src/components/CartProduct/CartProduct.css
@@ -92,6 +92,6 @@
 }
 
 .cart-product .cart-product-quantity input:focus {
-  outline: 3px solid orange;
+  outline: 3px solid var(--orange);
   text-align: center;
 }
