--- a/react-vite/src/components/Cart/Cart.css
+++ b/react-vite/src/components/Cart/Cart.css
@@ -12,6 +12,7 @@
 
 #cart-orders .cart-title {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 40px;
@@ -28,4 +29,17 @@
 
 #cart-orders .close-cart-btn i:hover {
   opacity: 0.7;
+}
+
+#cart-orders .cart-title .past-orders {
+  background-color: var(--cart-delete-btn);
+  border-radius: 5px;
+  font-style: italic;
+  text-align: center;
+  margin-top: 10px;
+  cursor: pointer;
+}
+
+#cart-orders .cart-title .past-orders:hover {
+  text-decoration: underline;
 }
