--- a/react-vite/src/components/Bookmarks/Bookmarks.css
+++ b/react-vite/src/components/Bookmarks/Bookmarks.css
@@ -1,9 +1,9 @@
 #bookmarks {
   display: flex;
-  /* flex-direction: column; */
   gap: 20px;
-  width: 90vw;
+  width: 85vw;
   scrollbar-color: var(--cart-scroll-color) transparent;
   overflow-y: hidden;
   overflow-x: scroll;
+  padding: 25px;
 }
