--- a/react-vite/src/components/Bookmark/Bookmark.css
+++ b/react-vite/src/components/Bookmark/Bookmark.css
@@ -1,3 +1,7 @@
+.bookmark {
+  max-width: 302.5px;
+}
+
 .bookmark .bookmark-note {
   background-color: rgb(214, 210, 210);
   border-bottom-left-radius: 5px;
