--- a/react-vite/src/components/ProductReviews/ProductReviews.css
+++ b/react-vite/src/components/ProductReviews/ProductReviews.css
@@ -16,3 +16,16 @@
   width: 50px;
   height: 50px;
 }
+
+#product-reviews .new-review-icon {
+  margin-left: 10px;
+  cursor: pointer;
+  position: absolute;
+  right: 10px;
+  bottom: 30px;
+}
+
+#product-reviews .new-review-icon i {
+  color: var(--orange);
+  font-size: xxx-large;
+}
