--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -7,6 +7,7 @@
   --dark-gray: #999999;
   --light-gray: #CCCCCC;
   --red: #FF5A5F;
+  --original-red: red;
   --green: rgb(21, 117, 21);
   --pink: pink;
   --wheat: wheat;
