update review thunk

--- a/react-vite/src/components/ProductReview/ProductReview.css
+++ b/react-vite/src/components/ProductReview/ProductReview.css
@@ -21,6 +21,10 @@
   display: flex;
 }
 
+.product-review.me .fa-star {
+  cursor: pointer;
+}
+
 .product-review .fa-star.orange {
   color: var(--orange);
 }
