changing scroll to auto to hide scrollbar when not scrolling

--- a/react-vite/src/components/Bookmarks/Bookmarks.css
+++ b/react-vite/src/components/Bookmarks/Bookmarks.css
@@ -4,6 +4,6 @@
   width: 85vw;
   scrollbar-color: var(--cart-scroll-color) transparent;
   overflow-y: hidden;
-  overflow-x: scroll;
+  overflow-x: auto;
   padding: 25px;
 }
