--- a/react-vite/src/components/ProductDetails/ProductDetails.css
+++ b/react-vite/src/components/ProductDetails/ProductDetails.css
@@ -21,7 +21,7 @@ h2.product-title {
   max-height: 275px;
   scrollbar-color: var(--dark-purple) transparent;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   text-align: justify;
   padding-right: 10px;
 }
