--- a/react-vite/src/components/Bookmark/Bookmark.css
+++ b/react-vite/src/components/Bookmark/Bookmark.css
@@ -10,11 +10,12 @@
   height: 110px;
   scrollbar-color: var(--cart-scroll-color) transparent;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .bookmark .bookmark-note span {
   color: var(--black);
+  line-break: anywhere;
 }
 
 .bookmark .bookmark-note textarea {
@@ -23,7 +24,7 @@
   width: 210px;
   border-radius: 5px;
   border: none;
-  background-color: gray;
+  background-color: var(--gray);
   padding: 25px;
   padding-left: 10px;
   padding-right: 45px;
@@ -61,8 +62,9 @@
 
 .bookmark .bookmark-textarea i.fa-paper-plane {
   position: absolute;
-  bottom: 25px;
-  right: 25px;
+  bottom: 15px;
+  right: 50px;
+  font-size: larger;
 }
 
 .bookmark .bookmark-textarea i.fa-paper-plane.disabled {
@@ -71,8 +73,9 @@
 
 .bookmark .bookmark-textarea i.fa-rectangle-xmark {
   position: absolute;
-  right: 25px;
-  top: 5px;
+  top: 10px;
+  right: 50px;
+  font-size: larger;
 }
 
 .bookmark .bookmark-textarea i:hover {
