--- a/react-vite/src/components/CartProducts/CartProducts.css
+++ b/react-vite/src/components/CartProducts/CartProducts.css
@@ -11,7 +11,7 @@
   height: 700px;
   scrollbar-color: var(--cart-scroll-color) transparent;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   border-top: 1px solid var(--gray);
   padding-top: 10px;
 }
