--- a/react-vite/src/components/PastOrders/PastOrders.css
+++ b/react-vite/src/components/PastOrders/PastOrders.css
@@ -3,6 +3,6 @@
   width: 90vw;
   gap: 20px;
   scrollbar-color: var(--cart-scroll-color) transparent;
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
 }
