--- a/react-vite/src/components/Bookmark/Bookmark.css
+++ b/react-vite/src/components/Bookmark/Bookmark.css
@@ -62,8 +62,8 @@
 
 .bookmark .bookmark-textarea i.fa-paper-plane {
   position: absolute;
-  bottom: 15px;
-  right: 50px;
+  bottom: 10px;
+  right: 20px;
   font-size: larger;
 }
 
@@ -73,9 +73,9 @@
 
 .bookmark .bookmark-textarea i.fa-rectangle-xmark {
   position: absolute;
-  top: 10px;
-  right: 50px;
-  font-size: larger;
+  top: 0px;
+  right: 18px;
+  font-size: x-large;
 }
 
 .bookmark .bookmark-textarea i:hover {
