--- a/react-vite/src/index.css
+++ b/react-vite/src/index.css
@@ -32,6 +32,7 @@
   --bookmark-note-background: rgb(214, 210, 210);
   --my-review-background: rgb(244, 209, 209);
   --unsave-color: rgb(3, 124, 3);
+  --discontinue-color: rgb(188 37 14);
 }
 
 option:hover {
